--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,8 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - mkdir -p var/run
-  - ls rtl
 script:
-  - raspi-rtl start
-  - ./platformTest.py
-  - raspi-rtl stop
-  - pytest rtl/tests -v --cov=rtl.tasks --cov-report=term-missing
+  - pytest -v --cov=rtl.tasks --cov-report=term-missing
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 after_success:
